--- a/test1/index.html.html
+++ b/test1/index.html.html
@@ -13,98 +13,27 @@
     .parent {
       display: flex;
     }
-
-    * {
-      text-decoration: none;
-    }
-
-
-
-    * {
-      box-sizing: border-box;
-    }
-
-    body {
-      font-family: Verdana, sans-serif;
-    }
-
-    .mySlides {
-      display: none;
-    }
-
-    * img {
-      align-items: flex-start;
-    }
-
-    /* Slideshow container */
-    .slideshow-container {
-      max-width: 850px;
-      position: relative;
-      margin: auto;
-    }
-
-    /* Caption text */
-    .text {
-      color: #724931;
-      font-size: 15px;
-      padding: 8px 12px;
-      position: absolute;
-      bottom: 8px;
-      width: 100%;
-      text-align: center;
-    }
-
-    /* Number text (1/3 etc) */
-    .numbertext {
-      color: #f2f2f2;
-      font-size: 12px;
-      padding: 8px 12px;
-      position: absolute;
-      top: 0;
-    }
-
-    /* The dots/bullets/indicators */
-    .dot {
-      height: 15px;
-      width: 15px;
-      margin: 0 2px;
-      background-color: #bbb;
-      border-radius: 50%;
-      display: inline-block;
-      transition: background-color 0.6s ease;
-    }
-
-    .active {
-      background-color: #717171;
-    }
-
-    /* Fading animation */
-    .fade {
-      animation-name: fade;
-      animation-duration: 1.5s;
-    }
-
-    @keyframes fade {
-      from {
-        opacity: .4
-      }
-
-      to {
-        opacity: 1
-      }
-    }
-
-    /* On smaller screens, decrease text size */
-    @media only screen and (max-width: 400px) {
-      .text {
-        font-size: 15px
-      }
-    }
   </style>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 </head>
 
-<body style="background-color: rgb(203, 227, 255);">
+<body style="background-color: rgb(255, 255, 255);">
+  
+  <header id="header">
+    <nav>
+        <div class="logo"><img src="images/icon/LOGO.png" alt="logo"></div>
+        <ul>
+            <li><a class="index.html" href="">Home</a></li>
+            <li><a href="#########">Portfolio</a></li>
+            <li><a href="#########">Team</a></li>
+            <li><a href="#########">Services</a></li>
+            <li><a href="#########">Contact</a></li>
+        </ul>
+        <div class="srch"><input type="text" class="search" placeholder="Search here..."><img
+                src="images/icon/search.png" alt="search" onclick=slide()></div>
+        <a class="get-started" href="login.html">Get Started</a>
+    </nav>
+</header>
 
 
 
@@ -112,6 +41,7 @@
 
 
   <img src="img/ScreenShot_20241217210754.png" alt="" class="img1">
+  <br>
   <h2 style="font-size: 40px; margin-left:20px;color: cornflowerblue;margin-top: 15px;margin-bottom: 35px;">
     online courses 
   </h2>
@@ -126,11 +56,15 @@
       </h4>
     </center>
   </div>
-  <div>
-    <center>
-      Get professional-level training and earn a credential recognized by leading companies
-    </center>
-  </div><br><br><br><br>
+  <img src="img/photo_2024-12-17_21-00-51.jpg" alt="" class="img2">
+
+<br><br><br><br>
+ 
+  <center style="font-size: 40px; margin-bottom: 350px;">
+    <h3 style="font-size: 30px;margin-top: 200px;">Find a career that works for you</h3>
+  <p style="font-size: 20px;">Whatever your background or interests are,<br> Professional Certificates have you covered.</p>
+  </center>
+  
   <!-- cards containers -->
   <div class="parent">
     <div class="card_container">
@@ -145,15 +79,12 @@
           <p>Collect, organize, and transform data to make informed decisions.</p><br>
           <h3 style="font-size: 20px;">Great if you like:</h3><br>
           <p>Attention to detail <br><br>Problem solving <br><br>Working with numbers</p><br><br>
-          <p><b>$90,500</b> median salary ¹</p>
-          <p><b>82,489</b> jobs available ¹</p>
           <a href="" class="btn">add to my learning</a>
           <a href="" class="btn">show more options</a>
           <a href="" class="btn">about</a>
         </div>
       </div>
     </div>
-
     <div class="card_container">
       <div class="card">
         <img src="img/photo_2024-12-19_21-54-00.jpg" alt="">
@@ -164,9 +95,6 @@
           <p>Oversee the planning and execution of projects to ensure they’re successful.</p><br>
           <h3 style="font-size: 20px;">Great if you like:</h3><br>
           <p>Leading a team <br><br> Problem solving<br><br>Communication</p><br><br>
-          <p><b>$102,800</b> median salary ¹</p>
-          <p><b>336,402 </b> jobs available ¹</p>
-
           <a href="" class="btn">add to my learning</a>
           <a href="" class="btn">show more options</a>
           <a href="" class="btn">about</a>
@@ -183,8 +111,6 @@
           <p>Develop strategies to protect organizations from cyber-attacks and disruptions.</p><br>
           <h3 style="font-size: 20px;">Great if you like:</h3><br>
           <p>Problem solving <br><br> Technical challenges<br><br>Attention to detail</p><br><br>
-          <p><b>$119,700</b> median salary ¹</p>
-          <p><b>147,973</b> jobs available ¹</p>
           <a href="" class="btn">add to my learning</a>
           <a href="" class="btn">show more options</a>
           <a href="" class="btn">about</a>
@@ -201,15 +127,12 @@
           <p>Make digital and physical products easier and more enjoyable to use.</p><br>
           <h3 style="font-size: 20px;">Great if you like:</h3><br>
           <p>Understanding people <br><br> Thinking creatively<br><br>Problem solving</p><br><br>
-          <p><b>$121,200</b> median salary ¹</p>
-          <p><b>$121,200</b> jobs available ¹</p>
           <a href="" class="btn">add to my learning</a>
           <a href="" class="btn">show more options</a>
           <a href="" class="btn">about</a>
         </div>
       </div>
     </div>
-
     <div class="card_container">
       <div class="card">
         <img src="img/cover-frontend-developer.png" alt="">
@@ -220,8 +143,6 @@
           <p>Design and develop the look, feel, function, and user experience of a website.</p><br>
           <h3 style="font-size: 20px;">Great if you like:</h3><br>
           <p>Problem solving <br><br> Thinking creatively<br><br>Creating great user experiences</p><br><br>
-          <p><b>$130,900</b> median salary ¹</p>
-          <p><b>29,258</b> jobs available ¹</p>
           <a href="" class="btn">add to my learning</a>
           <a href="" class="btn">show more options</a>
           <a href="" class="btn">about</a>
@@ -238,8 +159,6 @@
           <p>Record financial transactions and manage financial records.</p><br>
           <h3 style="font-size: 20px;">Great if you like:</h3><br>
           <p>Working with numbers <br><br> Attention to detail<br><br>Writing & organization</p><br><br>
-          <p><b>$45,700</b> median salary ¹</p>
-          <p><b>296,935</b> jobs available ¹</p>
           <a href="" class="btn">add to my learning</a>
           <a href="" class="btn">show more options</a>
           <a href="" class="btn">about</a>
@@ -249,105 +168,47 @@
   </div>
   </div>
 
-
-  <img src="img/photo_2024-12-17_21-00-51.jpg" alt="" class="img2">
-
  
-    <center style="font-size: 40px; margin-bottom: 350px;">
-      <h3 style="font-size: 30px;margin-top: 200px;">Find a career that works for you</h3>
-    <p style="font-size: 20px;">Whatever your background or interests are,<br> Professional Certificates have you covered.</p>
-    </center>
-
-
-<h5 style="margin-right:100px;margin-left:100px;font-size:larger; ">
-  
-    some courses you might be intersted in
-  
-</h5>
-<p>every course and skill you will learn it will make it easier for you in the feuture in </p>
-
-  <!-- slide show -->
-  <div class="slideshow-container">
-
-    <div class="mySlides fade">
-      <div class="numbertext">1 / 3</div>
-      <img src="img/photo_2024-12-17_20-24-02.jpg" style="width:100%">
-      <div class="text">top speed 330km/h</div>
-    </div>
-
-    <div class="mySlides fade">
-      <div class="numbertext">2 / 3</div>
-      <img src="img/photo_2024-12-19_22-58-13.jpg" style="width:100%">
-      <div class="text">accerlatio 0_100km/h with chorno in 2.7s</div>
-    </div>
-
-    <div class="mySlides fade">
-      <div class="numbertext">3 / 3</div>
-      <img src="img/photo_2024-12-19_22-58-23.jpg" style="width:100%">
-      <div class="text">eight speed dual clutch transmission</div>
-    </div>
-
-  </div>
-  <br>
-
-  <div style="text-align:center">
-    <span class="dot"></span>
-    <span class="dot"></span>
-    <span class="dot"></span>
-  </div>
-
-  <script>
-    let slideIndex = 0;
-    showSlides();
-
-    function showSlides() {
-      let i;
-      let slides = document.getElementsByClassName("mySlides");
-      let dots = document.getElementsByClassName("dot");
-      for (i = 0; i < slides.length; i++) {
-        slides[i].style.display = "none";
-      }
-      slideIndex++;
-      if (slideIndex > slides.length) { slideIndex = 1 }
-      for (i = 0; i < dots.length; i++) {
-        dots[i].className = dots[i].className.replace(" active", "");
-      }
-      slides[slideIndex - 1].style.display = "block";
-      dots[slideIndex - 1].className += " active";
-      setTimeout(showSlides, 3000); // Change image every 2 seconds
-    }
-  </script>
-
-
  
-
-  <footer style="background-color: rgb(10, 145, 179);">
-    <div class="footer_container">
-
-      <div class="social_icons">
-
-        <a href=""><i class="fa-brands fa-facebook"></i></a>
-        <a href=""><i class="fa-brands fa-instagram"></i></a>
-        <a href=""><i class="fa-brands fa-twitter"></i></a>
-        <a href=""><i class="fa-brands fa-google-plus"></i></a>
-        <a href=""><i class="fa-brands fa-youtube"></i></a>
+ <!--footer-->
+ <footer>
+  <div class="footer-container">
+      <div class="left-col">
+          <img src="images/icon/LOGO.png" style="width: 200px" />
+          <div class="logo"></div>
+          <div class="social-media">
+              <a href="#"><img src="images/icon\fb.png" /></a>
+              <a href="#"><img src="images/icon\insta.png" /></a>
+              <a href="#"><img src="images/icon\tt.png" /></a>
+              <a href="#"><img src="images/icon\ytube.png" /></a>
+              <a href="#"><img src="images/icon\linkedin.png" /></a>
+          </div>
+          <br /><br />
+          <p class="rights-text">
+              Copyright © 2024 Created By BATU
+          </p>
+          <br />
+          <p>
+              <img src="images/icon/location.png" /> BORG AL ARAB UNIVERSITY<br />BORG AL ARAB
+          </p>
+          <br />
+          <p>
+              <img src="images/icon/phone.png" /> +201022404167<br /><img src="images/icon/mail.png" />&nbsp;
+              BATU@gmail.com
+          </p>
       </div>
-      <div class="footernav">
-        <ul>
-          <li><a href="">home</a></li>
-          <li><a href="">news</a></li>
-          <li><a href="">about</a></li>
-          <li><a href="">contact us</a></li>
-          <li><a href="">our team</a></li>
-        </ul>
+      <div class="right-col">
+          <h1 style="color: #fff">Our Newsletter</h1>
+          <div class="border"></div>
+          <br />
+          <p>Enter Your Email to get our News and updates.</p>
+          <form class="newsletter-form">
+              <input class="txtb" type="email" placeholder="Enter Your Email" />
+              <input class="btn" type="submit" value="Submit" />
+          </form>
       </div>
-      <div class="footerbottom">
-        <p style="color: rgb(8, 26, 48);">copyright &copy;2024;designed by :<span class="designer">your biggest fan</span></p>
-      </div>
-    </div>
-  </footer>
-
-
+  </div>
+</footer>
 
 
 </body>
